changed redstarter tags to inhabitent & updated metatags in json and style sheet

--- a/themes/inhabitent/package.json
+++ b/themes/inhabitent/package.json
@@ -28,7 +28,7 @@
     "type": "git",
     "url": "git+https://github.com/redacademy/inhabitentr.git"
   },
-  "author": "redacademy",
+  "author": "Rob Monga",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/redacademy/inhabitentr/issues"
